--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -1,7 +1,7 @@
 FROM ubuntu
 
 RUN apt update && \
-    apt upgrade && \
+    apt -y upgrade && \
     apt -y install openssh-server
 
 CMD sleep 365d
