--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -1,4 +1,5 @@
 FROM nginxinc/nginx-unprivileged
 USER root
-RUN cp /usr/share/nginx/html/index.html /usr/share/nginx/html/default/index.html
+RUN mkdir /usr/share/nginx/html/default && \
+    cp /usr/share/nginx/html/index.html /usr/share/nginx/html/default/index.html
 USER nginx
