--- a/Dockerfile-nginx
+++ b/Dockerfile-nginx
@@ -1,5 +1,5 @@
 FROM nginxinc/nginx-unprivileged
 USER root
 RUN mkdir /usr/share/nginx/html/default && \
-    echo "Page inside 'default' folder" > /usr/share/nginx/html/default/index.html
+    cp /usr/share/nginx/html/index.html > /usr/share/nginx/html/default/index.html
 USER nginx
