--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -7,4 +7,4 @@ RUN apt update && \
     apt -y install openssh-server iputils-ping traceroute iproute2 net-tools netcat dnsutils && \
     chmod +x /run.sh
 
-CMD /run.sh
+CMD /run.sh ${ARG1} ${ARG2}
