--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -4,7 +4,7 @@ COPY run.sh /run.sh
 
 RUN apt update && \
     apt -y upgrade && \
-    apt -y install openssh-server iputils-ping traceroute iproute2 net-tools netcat dnsutils && \
+    apt -y install openssh-server iputils-ping traceroute iproute2 net-tools netcat dnsutils mc && \
     chmod +x /run.sh
 
 CMD /run.sh ${ARG1} ${ARG2}
